# AI_AUTO_Create_IT

./: .gitignore  README.md  pyproject.toml  requirements-dev.lock.txt  requirements.txt  venv-packages.txt
.devcontainer/: devcontainer.json
.github/workflows/: python.yml
src/: database.py  main.py  ocr_excel.py
src/templates/: admin_reviews.html  index.html
src/uploads/: 20260514225157_5_2.xlsx  20260514225200_9_2.xlsx
tests/: test_main.py
